added LED support to the cfa10036_defconfig

--- a/arch/arm/configs/cfa10036_defconfig
+++ b/arch/arm/configs/cfa10036_defconfig
@@ -34,6 +34,7 @@ CONFIG_CMD_OFTREE=y
 CONFIG_CMD_TIMEOUT=y
 CONFIG_CMD_PARTITION=y
 CONFIG_CMD_GPIO=y
+CONFIG_CMD_LED=y
 # CONFIG_SPI is not set
 CONFIG_I2C=y
 CONFIG_MCI=y
@@ -42,3 +43,5 @@ CONFIG_MCI_MXS=y
 CONFIG_FS_EXT4=y
 CONFIG_FS_FAT=y
 CONFIG_FS_FAT_LFN=y
+CONFIG_LED=y
+CONFIG_LED_GPIO=y
